--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.1.0",
+    "node-sass": "^5.0.0",
     "prettier": "2.2.0"
   }
 }
