--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
     "@prettier/plugin-pug": "^1.10.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -11,6 +13,7 @@
     "eslint-plugin-import": "^2.22.1",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "node-sass": "^5.0.0",
